# telegram_bot_part2

./: .gitignore  README.md  pyproject.toml
app/: main.py  tables.py
app/admin/: authentication.py  main.py  views.py
app/core/orders/: constants.py  exceptions.py  models.py  repositories.py  servises.py
app/core/users/: constants.py  models.py  repositories.py  services.py
app/handlers/: __init__.py  commands.py  filters.py  helpers.py  waiter_commands.py
app/infra/postgres/: db.py
app/jobs/: sync_roles.py
docs/: order.mmd
settings/: config.py
