[project]
name = "telegram-bot-ice-cream-shop"
version = "0.1.0"
description = "Telegram bot for ice cream shop."
authors = [
    {name = "larsanik"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot (>=22.5,<23.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
