[project]
name = "telegram_bot_part2"
version = "0.1.0"
description = "Telegram bot for ice cream shop."
authors = [
    {name = "larsanik"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "python-telegram-bot[job-queue] >=21.6, <23.0",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "sqlalchemy[asyncio] (>=2.0.50,<3.0.0)",
    "ptbcontrib[roles] @ git+https://github.com/python-telegram-bot/ptbcontrib.git@main",
    "sqladmin (>=0.27.2,<0.28.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "uvicorn (>=0.49.0,<0.50.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
asyncpg-stubs = { version = "^0.31.1", python = ">=3.13" }
